Fix submit input bug on safari v2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ html {
   margin-top: 15px;
   border: none;
   text-align: center;
+  appearance: none;
   -webkit-appearance: none;
 }
 .btn:hover {
